Added Notch filter section

--- a/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
@@ -28,6 +28,7 @@
 \usepackage{longtable}
 \usepackage{array}
 \usepackage{makecell}
+\usepackage{siunitx}
 
 \renewcommand\theadalign{bc}
 \renewcommand\theadfont{\bfseries}
