--- a/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -121,7 +121,9 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}CFURH - Compensação Financeira pelo Uso dos Recursos Hídricos
 \paragraph{}MLP - Multilayer Perceptron
 \pagebreak
-
+\paragraph{}FFT - Fast Fourier Transform
+\paragraph{}IIR - Infinite Impulse Response
+\paragraph{}FIR - Finite Impulse Response
 
 
 
