Added signal processing section

--- a/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
@@ -14,7 +14,7 @@
 \usepackage{alltt}
 %\usepackage{makeidx}
 %\makeindex
-\usepackage[figuresright]{rotating} % for saydways tables and figures
+%\usepackage[figuresright]{rotating} % for saydways tables and figures
 \usepackage{enumerate}			% for configuration of enumerate environment
 \usepackage{amsmath}
 \usepackage{amssymb}
