--- a/Dissertacao/ProjetoFelipeClaudio/biblio.bib
+++ b/Dissertacao/ProjetoFelipeClaudio/biblio.bib
@@ -1,3 +1,10 @@
+@MASTERSTHESIS{
+	AlteracaoModeloComercializacao,
+	AUTHOR = "Edimilson Ferreira da Silva",
+	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
+	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
+	YEAR = "2008",
+}
 @MISC{
 	MatrizEnergetica,
 	AUTHOR = "Empresa de Pesquisa Energética",
@@ -22,7 +29,6 @@
 	YEAR = "2019",
 	NOTE = "(Acesso em 27 Janeiro 2019)",
 }
-
 @MISC{
 	SIN_MAPAS,
 	AUTHOR = "ONS",
@@ -51,7 +57,7 @@
 	CCEE_COM_QUEM_SE_RELACIONA,
 	AUTHOR = "CCEE",
 	TITLE = "Com quem se relaciona",
-	HOWPUBLISHED = "https://bit.ly/2DKYD3r",
+	HOWPUBLISHED = "https://www.ccee.org.br/portal/faces/pages\_publico/onde-atuamos/com\_quem\_se\_relaciona",
 	YEAR = "2019",
 	NOTE = "(Acesso em 31 Janeiro 2019)",
 }
@@ -74,7 +80,7 @@
 @MISC{
 	CCEE_PLD_ANEXO,
 	AUTHOR = "CCEE",
-	TITLE = "Preço de Liquidação das Diferenças_Anexo\_1.0\_formatado - CCEE",
+	TITLE = "Preço de Liquidação das Diferenças\_Anexo\_1.0\_formatado - CCEE",
 	HOWPUBLISHED = "www.ccee.org.br/ccee/documentos/ccee\_059061",
 	YEAR = "2019",
 	NOTE = "(Acesso em 10 de Fevereiro de 2019)",
@@ -103,7 +109,6 @@
 	YEAR = "2019",
 	NOTE = "(Acesso em 26 Fevereiro 2019)",
 }
-
 @MISC{
 	MANUAIS,
 	AUTHOR = "CEPEL",
@@ -112,8 +117,6 @@
 	YEAR = "2019",
 	NOTE = "(Acesso em 26 Fevereiro 2019)",
 }
-
-
 @MISC{
 	RES_NORMA_482,
 	AUTHOR = "ANEEL",
@@ -136,13 +139,6 @@
 	TITLE = "Previsão multi-passo a frente do preço de energia elétrica de curto prazo no mercado brasileiro",
 	SCHOOL = "Universidade Federal do Pará - Instituto de Tecnologia, programa de pós-graduação em engenharia elétrica",
 	YEAR = "2014"
-}
-@MASTERSTHESIS{
-	AlteracaoModeloComercializacao,
-	AUTHOR = "Edimilson Ferreira da Silva",
-	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
-	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
-	YEAR = "2008",
 }
 @MISC{
 	PrevisaoPrecoFuturoACL,
@@ -171,4 +167,48 @@
 	TITLE = "Preço spot de eletricidade: teoria e evidências do caso brasileiro",
 	JOURNAL = "IV Encontro de Enconomia Catarinense, 2010, Criciúma",
 	YEAR = "2010",
+}
+@MISC{
+	birthNY,
+	AUTHOR = "Newton (1988)",
+	TITLE = "Monthly New York City births: unknown scale. Jan 1946 ? Dec 1959",
+	HOWPUBLISHED = "https://datamarket.com/data/set/22nv/monthly-new-york-city-births-unknown-scale-jan-1946-dec-1959\#!ds=22nv\&display=line",
+	YEAR = "1988",
+	NOTE = "(Acesso em 9 de Abril 2019)",
+}
+@MISC{
+	shampooSales,
+	AUTHOR = "Makridakis, Wheelwright and Hyndman",
+	TITLE = "Sales of shampoo over a three year period",
+	HOWPUBLISHED = "https://datamarket.com/data/set/22r0/sales-of-shampoo-over-a-three-year-period\#!ds=22r0\&display=line",
+	YEAR = "1998",
+	NOTE = "(Acesso em 9 de Abril 2019)",
+}
+@BOOK{
+	sTemp,
+	TITLE="Análise de Séries Temporais",
+	AUTHOR="Ricardo Sandes Ehlers",
+	YEAR={2009}
+}
+@BOOK{
+	apostilaCaloba,
+	TITLE="Introdução ao Uso de Redes Neurais na Modelagem de
+	Sistemas Dinâmicos e Séries Temporais.",
+	AUTHOR="Luiz Pereira Calôba",
+	HOWPUBLISHED="XIV Congresso Brasileiro de Automática, Natal",
+	YEAR={2002},
+}
+@BOOK{
+	introSP,
+	TITLE="Introduction to Signal Processing",
+	AUTHOR="Sophocle J. Orfanidis",
+	HOWPUBLISHED="https://www.ece.rutgers.edu/~orfanidi/intro2sp/",
+	YEAR={2002},
+}
+@MISC{
+	tccDanilo,
+	TITLE = "Danilo Filippo Reiszel Pereira",
+	AUTHOR = "Aprendizado de máquina e aprendizado profundo para apoio à decisão no mercado financeiro",
+	SCHOOL = "Univeridade Federal de do Rio de Janeiro",
+	YEAR = "2018",
 }
