added mlp section

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -199,7 +199,7 @@ O valores de definidos para os últimos 5 anos foram:
 	
 	\begin{center}
 		
-		\caption{Arquivos de entrada do DECOMP \cite{CCEE_METODOLOGIA_PRECOS}.}
+		\caption{Preço mínimo e máximo do PLD \cite{CCEE_METODOLOGIA_PRECOS}.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -230,7 +230,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	
 	\begin{center}
 		
-		\caption{Arquivos de entrada do DECOMP \cite{}.}
+		\caption{Arquivos de entrada do DECOMP \cite{CCEE_METODOLOGIA_PRECOS}.}
 		
 		\begin{tabular}{|c|c|}\hline
 			
